View more button was changed to white text to avoid contrast issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,6 +97,10 @@ h2 {
     border: none;
     cursor: pointer;
 }
+
+.card-link a {
+    color: #fff;
+}
 /*---------------Forms*/
 .input-field label{
     color: #1a1a1a;
